--- a/index.html
+++ b/index.html
@@ -157,6 +157,30 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3444.4574416052583!2d-97.67413738507221!3d30.30950378178669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644c9dc1a9b34af%3A0xd36140cadbee2e90!2s3203%20Northeast%20Dr%20b%2C%20Austin%2C%20TX%2078723!5e0!3m2!1sen!2sus!4v1636030745064!5m2!1sen!2sus" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+      </iframe>
+    </div>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk ot you!
+      </p>
+      <address>
+        55 Main Street <br />
+        Some Town, Ca <br />
+        12345<br />
+        P: 555.RUN.BUDZ (555.786.2839)<br />
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
   </section>
 
   <!-- footer -->
